--- a/style.css
+++ b/style.css
@@ -175,4 +175,61 @@
     object-fit: cover;
     border-radius: 6px;
   }
+
+  /* Tela usuarios */
+ .main-content {
+    flex-grow: 1;
+    padding: 30px;
+  }
+  
+  h2 {
+    margin-top: 0;
+  }
+  
+  .form-card {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 400px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  }
+  
+  .form-card label {
+    display: block;
+    margin-top: 10px;
+  }
+  
+  .form-card input,
+  .form-card select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .form-card button {
+    margin-top: 15px;
+    width: 100%;
+    padding: 10px;
+    background: #3b3bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .lista {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .lista li {
+    background: white;
+    padding: 10px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+  }
   
